--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 html,body{
-  width:100%;
   height: 100%;
   background: #444444; /* Old browsers */
   z-index: 0;
-  position:fixed;
+  position:absolute;
+  width: 1800px;
+  overflow: auto;
 
 
 }
@@ -11,7 +12,7 @@ html,body{
 nav{
   background: #000; /* Old browsers */
   position:fixed;
-  height: 30px;
+  height: 50px;
   z-index: 1;
   width: 100%;
   clear:both;
@@ -20,23 +21,26 @@ nav{
 
 #float{
   position:absolute;
-  width: 100%;
-  height: 100%
+  width: 1800px;
+  height: 100%;
 }
 
-.rect{
+.rectR{
   position:relative;
   background-color: red;
   width: 200px;
   height:100%;
   float:left;
-  clear:both;
+  display:block;  
 
 }
 
-#rect2{
+.rectG{
+  position:relative;
   background-color: green;
-  
-
+  width: 200px;
+  height:100%;
+  float:left;
+  display:block;  
 
 }
