Corrigido esoaço do lado direito no overflow

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@ html,body{
   background: #444444; /* Old browsers */
   z-index: 0;
   position:absolute;
+  /* Este valor tem que ser dado dianmicamente pelo javascript - width dos divs rects * 9(numero de divs rect)  */
   width: 1800px;
-  overflow: auto;
 
 
 }
@@ -21,7 +21,6 @@ nav{
 
 #float{
   position:absolute;
-  width: 1800px;
   height: 100%;
 }
 
