--- a/css/style.css
+++ b/css/style.css
@@ -24,22 +24,35 @@ nav{
   height: 100%;
 }
 
-.rectR{
+.rect{
   position:relative;
   background-color: red;
-  width: 200px;
+  width: 300px;
   height:100%;
   float:left;
   display:block;  
-
 }
 
-.rectG{
-  position:relative;
-  background-color: green;
-  width: 200px;
-  height:100%;
-  float:left;
-  display:block;  
+h3.titulo{
+  position: relative;
+  top:20%;
+  right:0%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.6);
+  float:right;
+  font-size: 22px;
+  padding: 3px 10px;
+  padding-right: 40px;
+}
 
+p.descricao{
+  position: relative;
+  top:60%;
+  right:0%;
+  max-width:75%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.6);
+  float:left;
+  font-size: 24px;
+  padding: 10px 10px;
 }
