--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,9 @@ header{
 
 header a{
     position: relative;
-    top:15px;
-    font-size: 20px;
+    top:20px;
+    left:20px;
+    font-size: 12px;
     padding-right: 60px;
 }
 
