--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ header{
 
 header a{
     position: relative;
-    top:20px;
+    top:22px;
     left:20px;
     font-size: 12px;
     margin-right: 60px;
@@ -36,7 +36,7 @@ nav{
 
 nav a{
   position: relative;
-    top:15px;
+    top:17px;
     font-size: 20px;
     margin-right: 30px;
     margin-left: 30px;
@@ -112,3 +112,85 @@ p.descricao{
   box-shadow: 2px 2px 10px #000;
 
 }
+
+
+#main{
+  background-color: rgba(100, 0, 0, 1);
+  width: 100%;
+  background: url(../img/fundo.png) no-repeat center center fixed; 
+  
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#info{
+  color:white;
+  padding-top: 125px;
+  position:relative;
+  width:80%;
+
+  display: block;
+  margin-left: 20%;
+
+  font-family: georgia;
+
+}
+
+
+#info h1{
+  margin-left: 25%;
+
+  font-size: 50px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 1);
+  padding-left: 20px;
+
+
+
+}
+
+#info h3{
+    margin-left: 25%;
+  padding-left: 25px;
+
+
+  background-color: rgba(0, 0, 0, 1);
+
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 60px;
+
+}
+
+#info p{
+  font-size: 20px;
+  line-height:110%;
+  position:relative;
+  margin-left: 16%;
+  margin-bottom: 60px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+img{
+  width:30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom:50px;
+}
+#info iframe {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 60px;
+
+
+
+
+}
+
+
