--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,30 @@
+/*############################# TIPOGRAFIA #############################*/
+
+
+/*http://www.google.com/fonts#UsePlace:use/Collection:Ubuntu*/
+
+@font-face {
+font-family: "Ubuntu";
+src: local('Ubuntu-R'), url('/fonts/Ubuntu-R.ttf') format('truetype');
+font-weight: normal;
+}
+
+
+@font-face {
+font-family: "Ubuntu";
+src: local('Ubuntu-B'), url('/fonts/Ubuntu-B.ttf') format('truetype');
+font-weight: bold;
+}
+
+
+
 html,body{
   height: 100%;
   background: #000; /* Old browsers */
   z-index: 0;
   position:absolute;
+  font-family: "Ubuntu", georgia;
   /* Este valor tem que ser dado dianmicamente pelo javascript - width dos divs rects * 9(numero de divs rect)  */
-  width: 1800px;
 }
 
 header{
@@ -32,6 +52,8 @@ nav{
   clear:both;
   box-shadow: 0px 4px 8px #000;
   text-align: center;
+
+  box-shadow: inset 0px  -10px 20px rgba(255, 255, 255, 0.1);
 }
 
 nav a{
@@ -70,7 +92,7 @@ a:link:hover,a:visited:hover{
 h3.titulo{
   position: relative;
   top:35px;
-  right:48px;
+  right:52px;
   color: rgba(220, 220, 220, 0.3);
   float:right;
   font-size: 100px;
@@ -79,7 +101,7 @@ h3.titulo{
 
 }
 
-h3.artistas{
+h3.leitores{
   position: relative;
   top:200px;
   right:0px;
@@ -90,7 +112,7 @@ h3.artistas{
   font-size: 16px;
   line-height:110%;
   box-shadow: 2px 2px 10px #000;
-  width: 35%;
+  width: 30%;
   padding: 10px 10px;
 
 
@@ -115,14 +137,18 @@ p.descricao{
 
 
 #main{
-  background-color: rgba(100, 0, 0, 1);
+  background-attachment:fixed;
+  background-repeat: no-repeat;
+  background-position:center center;
+  background-color: rgba(0, 0, 0, 1);
   width: 100%;
-  background: url(../img/fundo.png) no-repeat center center fixed; 
-  
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
+
 }
 
 #info{
@@ -133,8 +159,6 @@ p.descricao{
 
   display: block;
   margin-left: 20%;
-
-  font-family: georgia;
 
 }
 
@@ -147,12 +171,92 @@ p.descricao{
   font-weight: bold;
   background-color: rgba(0, 0, 0, 1);
   padding-left: 20px;
-  margin-right: 16%;
+  padding-right: 15%;
 
 
 }
 
+
+#info h2{
+  margin-left: 25%;
+  padding-left: 25px;
+  background-color: rgba(0, 0, 0, 1);
+  font-weight: bold;
+  font-size: 12px;
+  position: relative;
+  top:-25px;
+  margin-bottom: 50px;
+
+}
+
 #info h3{
+    margin-left: 25%;
+  padding-left: 25px;
+  background-color: rgba(0, 0, 0, 1);
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 60px;
+
+}
+
+#info p{
+  font-size: 20px;
+  line-height:110%;
+  position:relative;
+
+  margin-bottom: 60px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.9);
+
+  padding-right: 27%;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+#info img{
+  width:45%;
+  display: block;
+  margin-left: 25%;
+  margin-right: auto;
+}
+
+
+
+/************************
+ * PARA AUTORES
+ ***********************/
+
+#info2{
+  color:white;
+  padding-top: 5%;
+  position:relative;
+  width:70%;
+
+  display: block;
+  margin-left: 20%;
+
+   font-family: 'Ubuntu';
+  src: url('fonts/Ubuntu-R.ttf');
+  src: local('Ubuntu-R'), local('Ubuntu-R'), url('fonts/Ubuntu-R.ttf') format('truetype');
+}
+
+
+#info2 h1{
+  margin-left: -21.5%;
+
+  font-size: 50px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 1);
+  padding-left: 10px;
+  margin-right: 71.3%;
+
+}
+
+#info2 h3{
     margin-left: 25%;
   padding-left: 25px;
 
@@ -165,7 +269,7 @@ p.descricao{
 
 }
 
-#info p{
+#info2 p{
   font-size: 20px;
   line-height:110%;
   position:relative;
@@ -180,22 +284,277 @@ p.descricao{
   margin-right: auto;
 }
 
-img{
-  width:30%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom:50px;
+
+
+
+.loja{
+  background-color: white;
+  position:relative;
+
 }
+
+.loja p{
+  background-color: white;
+  position:relative;
+  padding-top: 10px;
+
+}
+
+.item{
+  top: 100px;
+  width: 300px;
+  color:black;
+  position:relative;
+  display: block;
+  margin-left: 7%;
+  float: left;
+  padding-bottom: 100px;
+
+ 
+   font-family: 'Ubuntu';
+  src: url('fonts/Ubuntu-R.ttf');
+  src: local('Ubuntu-R'), local('Ubuntu-R'), url('fonts/Ubuntu-R.ttf') format('truetype');
+}
+
+.itemLoja{
+  width: 300px;
+ position:relative;
+display: block;
+padding: 0;
+
+}
+
+.comprar{
+  
+  font-size: 14px;
+   position:relative;
+   float: right;
+  right: 0px;
+  background-color: rgba(0, 0, 0, 0.6);
+  clear: both;
+}
+
+
+html#loja,body#loja{
+  height: 100%;
+  background: #FFF; /* Old browsers */
+  z-index: 0;
+  position:absolute;
+  /* Este valor tem que ser dado dianmicamente pelo javascript - width dos divs rects * 9(numero de divs rect)  */
+  width: 100%;
+  font-family: 'Ubuntu';
+    src: url('fonts/Ubuntu-R.ttf');
+    src: local('Ubuntu-R'), local('Ubuntu-R'), url('fonts/Ubuntu-R.ttf') format('truetype');
+}
+
+
+
+
+/*############################# SLIDE #############################*/
+
+
+/********************************
+ * AUTORES
+ ********************************/
+
+#video {
+  width:100%;
+  height: 281px;
+  background-color: black;
+  margin-bottom: 200px;
+}
+
 #info iframe {
+  position: relative;
+  left: 0px;
+  background-width: 100%;
+}
+
+
+.esc {
+  position: relative;
+  clear: both;
+  width: 100%;
+}
+
+
+
+#logo {
+  position: relative;
+  margin: 20px auto;
+  width: 960px;
+  text-align: center;
+}
+
+#logo h1 {
+  font-size: 100px;
+  position: relative;
+  margin: 20px auto auto auto;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 60px;
+  float: left;
+}
+
+#logo h1 span {
+  text-transform: none;
+}
+
+#logo a {
+  background: none;
+  display: inline;
+  margin: 0px;
+}
+
+#logo img {
+  position: relative;
+  cursor: pointer;
+  display: block;
+  float: left;
+  margin-top: 10px;
+}
+
+#logo h2 {
+  font-size: 50px;
+}
+
+#content {
+  position: relative;
+  top: 0px;
+  width: 960px;
+  margin-left:auto;
+  margin-right:auto;
+}
+/********************************
+ * generic als elements styling
+ ********************************/
+.als-container {
+  position: relative;
+  width: 100%;
+  margin: 0px auto;
+}
+
+.als-viewport {
+  position: relative;
+  overflow: hidden;
+  margin: 0px auto;
+}
+
+.als-wrapper {
+  position: relative;
+  list-style: none;
+}
+
+.als-item {
+  position: relative;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  float: left;
+}
+
+.als-prev, .als-next {
+  position: absolute;
+  cursor: pointer;
+  clear: both;
+}
 
 
+/**************************
+ * specific als elements
+ * styling for #lista1
+ **************************/
 
+#lista1 {
+  margin: 60px auto 80px auto;
+}
+
+#lista1 .als-item {
+  margin: 0px 30px;
+  min-height: 140px;
+  min-width: 128px;
+}
+
+#lista1 .als-item img {
+  position: relative;
+  display: block;
+  vertical-align: middle;
+  width: 90px;
+    height: 90px;
+  margin-bottom: 8px;
+}
+
+#lista1 .als-prev, #lista1 .als-next {
+  top: 45px;
+  width: 15px;
+  height: 22px;
+}
+
+#lista1 .als-prev {
+  left: 90px;
+}
+
+#lista1 .als-next {
+  right: 100px;
+}
+
+/************************
+ * Texto
+ ***********************/
+
+p.ex{
+  position: absolute;
+  left:50px;
+  top: 20px;
+  color:#FFFFFF;
+  width: 500px;
+  height: 300px;
+}
+
+/************************
+ * PARA AUTORES
+ ***********************/
+
+#info2{
+  color:white;
+  padding-top: 5%;
+  position:relative;
+  width:70%;
+
+  display: block;
+  margin-left: 20%;
+
+   font-family: 'Ubuntu';
+  src: url('fonts/Ubuntu-R.ttf');
+  src: local('Ubuntu-R'), local('Ubuntu-R'), url('fonts/Ubuntu-R.ttf') format('truetype');
+}
+
+
+#info2 h1{
+  margin-left: -21.5%;
+  font-size: 50px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 1);
+  padding-left: 10px;
 
 }
+
+#info2 h3{
+    margin-left: 25%;
+  padding-left: 25px;
+
+
+  background-color: rgba(0, 0, 0, 1);
+
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 60px;
+
+}
+
+html#info,body#info{
+  width: 100%;
+}
+
+
 
 
